--- a/contacto/estilos.css
+++ b/contacto/estilos.css
@@ -1,90 +1,138 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
-*{
-    margin: 0;
-    padding: 0;
+/* Estilos generales */
+* {
     box-sizing: border-box;
-    font-family: 'Open Sans', sans-serif;
-}
-.container-form{
-    width: 100%;
-    max-width: 1100px;
-    margin: auto;
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-    grid-gap: 50px;
-    margin-top: 90px;
-}
-.container-form h2{
-    margin-bottom: 15px;
-    font-size: 35px
-}
-.container-form p{
-    font-size: 17px;
-    line-height: 1.6;
-    margin-bottom: 30px;
-}
-.container-form .info-form a{
-    font-size: 17px;
-    display: inline-block;
+    font-family: Arial, sans-serif;
+  }
+  
+  body {
+    background-color: #f8f8f8;
+  }
+  
+  /* Estilos del contenedor del formulario */
+  .container-form {
+    max-width: 800px;
+    margin: 0 auto;
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    padding: 30px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center; /*Centrar todo el contenido horizontalmente*/
+    align-items: center; /*Centrar todo el contenido verticalmente*/
+  }
+  
+  .info-form {
+    flex-basis: 100%;
+    text-align: center;
+  }
+  
+  .info-form h2 {
+    margin-top: 0;
+    font-size: 36px;
+  }
+  
+  .info-form p {
+    font-size: 18px;
+    color: #777;
+  }
+  
+  .info-form a {
+    display: block;
+    margin-bottom: 10px;
+    font-size: 18px;
+    color: #777;
     text-decoration: none;
+  }
+  
+  .info-form a:hover {
+    color: #333;
+  }
+  
+  /* Estilos del formulario */
+  #formulario-contacto {
+    flex-basis: calc(50% - 20px);
+  }
+  
+  .campo {
     width: 100%;
-    margin-bottom: 15px;
-    color: black;
-    font-weight: 700;
-}
-.container-form .info-form a i{
-    color: rgb(126,86,51);
-    margin-right: 10px;
-}
-.container-form form .campo, textarea{
-    width: 100%;
-    padding: 15px 10px;
-    font-size: 16px;
-    border: 1px solid #dbdbdb;
+    padding: 10px;
     margin-bottom: 20px;
-    border-radius: 3px;
-    outline: 0px;
-}
-.container-form form textarea{
-    max-width: 530px;
-    min-width: 530px;
-    min-height: 140px;
-    max-height: 150px;
-}
-.container-form .btn-enviar{
-    padding: 3%;
-    font-size: 100%;
-    border: none;
-    outline: 0px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    font-size: 16px;
+  }
+  
+  .campo:focus {
+    outline: none;
+    border: 1px solid #7b99ff;
+  }
+  
+  textarea {
+    width: 100%;
+    height: 150px;
+    padding: 10px;
+    margin-bottom: 20px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    font-size: 16px;
+  }
+  
+  textarea:focus {
+    outline: none;
+    border: 1px solid #7b99ff;
+  }
+  
+  .error {
+    display: block;
+    color: red;
+    margin-bottom: 20px;
+  }
+  
+  .btn-enviar {
     background-color: rgb(126,86,51);
-    color: white;
-    border-radius: 3px;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    font-size: 18px;
     cursor: pointer;
-    transition: all 300ms ease;
-    flex-grow: 100px 100px;
-    height: 50px;
-    width: 150px;
-}
-.container-form .btn-enviar:hover{
+    transition: background-color 0.3s ease-in-out;
+    width: 100%;
+  }
+  
+  .btn-enviar:hover {
     background-color: rgb(93, 3, 3)
-}
-
- .container-form .btn-volver{
-    padding: 3%;
-    font-size: 100%;
-    border: none;
-    outline: 0px;
+  }
+  
+  .btn-volver {
+    display: block;
+    margin-top: 20px;
     background-color: rgb(126,86,51);
-    color: white;
-    border-radius: 3px;
-    cursor: pointer;
-    transition: all 300ms ease;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    font-size: 18px;
+    text-align: center;
     text-decoration: none;
-    height: 50px;
-    width: 150px;
-
-}
-
-.container-form .btn-volver:hover{
+    transition: background-color 0.3s ease-in-out;
+  }
+  
+  .btn-volver:hover {
     background-color: rgb(93, 3, 3)
+  }
+  
+@media (max-width: 768px) {
+    
+    .container-form {
+      padding: 20px;
+    }
+  
+    
+    #formulario-contacto {
+      flex-basis: 100%;
+      margin-bottom: 20px;
+    }
 }
+  
