--- a/app/templates/app/index/index.html
+++ b/app/templates/app/index/index.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <div class="container">
-             <p class="logo">--Panadería--<img src="{%static 'imagenes/LogoTrigo.png'%}" alt="#" class="trigo"></p>
+             <p class="logo">Panadería<img src="{%static 'imagenes/LogoTrigo.png'%}" alt="#" class="trigo"></p>
              <nav>
                 <a href="{%url 'carritocompra'%}">Pide aqui! </a>
                 <a href="#somos-pana">Quienes Somos</a>
