--- a/app/templates/app/base/base.html
+++ b/app/templates/app/base/base.html
@@ -20,9 +20,20 @@
         <div class="container">
              <p class="logo">Panadería <img src="{%static 'imagenes/LogoTrigo.png'%}" alt="#" class="trigo"></p>
              <nav>
-                <a href="{%url 'listar_producto'%}">Lista de panes</a>
-                <a href="{%url 'agregar_producto'%}">Agregar panes </a>
-                <a href="{%url 'carritocompra'%}">Volver </a>
+                {% if perms.app.view_producto %}
+                    <a class="btn-listar"href="{%url 'listar_producto'%}">Lista de panes</a> 
+                {% endif %}
+                
+                {% if perms.app.add_producto %}
+                    <a class="btn-agregar" href="{%url 'agregar_producto'%}">Agregar panes </a>
+                {% endif %}
+                    <a class="btn-Volver" href="{%url 'carritocompra'%}">Volver </a>
+
+                {% if user.is_authenticated %}
+                    <a class="btn-cerrar-login" href="{% url 'logout'%}">Cerrar Sesion</a>
+                {% else %}
+                    <a class="btn-login" href="{%url 'login'%}">Iniciar Sesion</a>
+                {% endif %}
                 
              </nav>
         </div>
@@ -70,7 +81,8 @@
                     <small>&copy; 2023 <b>Todos los derechos Reservados<img src="{% static 'imagenes/LogoTrigo.png'%}" alt="" width="50"></b></small>
                 </div>
             </footer>
-  
+
+<script src="{%static 'base/retroceder.js'%}"></script>  
 </body>
 
 </html>
