--- a/app/templates/app/crud/modificar.html
+++ b/app/templates/app/crud/modificar.html
@@ -5,11 +5,6 @@
 
 <link rel="stylesheet" href="{% static 'crud/modificar.css'%}">
 
-
-
-
-
-
         <div class="row">
             <div class="col-12 col-md-6 offset-md-3">
                 <div class="card">
@@ -22,32 +17,25 @@
 
                 {{form }}
 
-
-
                 <div class="d-flex justify-content-end">
 
+                    <button type="reset" value="Cancelar" class="btn btn-secondary" onclick="goBack()">Cancelar</button>
+                    &nbsp;
+                    <button type="submit" value="Editar" class="btn btn-primary" onclick="goBack()">Modificar</button>
 
-
-                    <input type="reset" value="Cancelar" class="btn btn-secondary"> 
-                    &nbsp;    
-                    <input type="submit" value="Editar" class="btn btn-primary">
-    
+                    <script>
+                        function goBack() {
+                          window.history.back();
+                        }
+                    </script>
 
                 </div>
-             
-
-
             </form>
-
-
-
             </div>
         </div>
-
-
-
     </div>
 </div>
 
-
 {% endblock %}
+
+<script src="{%static 'base/retroceder.js'%}"></script>
