--- a/app/templates/registration/login.html
+++ b/app/templates/registration/login.html
@@ -7,64 +7,59 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Inicio sesion</title>
-    <link rel="stylesheet" href="{%static 'inicio/inicio.css'%}">
+    <link rel="stylesheet" href="{%static 'login/login.css'%}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/bootstrap-transparent-navbar-main/css/bootstrap.min.css">
 
 </head>
-
-
-
-
-
 <body>
 
+    <div class="cod-container">
+        <div class="form-header">
+            <img src="{%static 'imagenes/LogoTrigo.png'%}" alt="Logotrigo">
+            <h1>Pana<span>deria</span></h1>
+        </div>
 
-  <div class="logo-tac">
+        <div class="form-content">
+            <form action="#" class="cod-form" id="login-form">
+                <div class="form-title">
+                    <h3>Iniciar Sesión</h3>
+                </div>
+            </form>
+  
+            <form class="needs-validation" action="" method="post">
+                <div class="form-group was-validated">
+                    <label class="form-label" for="email">Usuario</label>
 
-  </div>
+                    {% csrf_token%}
 
-    <div class="login">
+                    <input class="form-control" type="text" id="{{form.username}}
+                    <div class="invalid-feedback">
+                        Por favor, Ingresa tu correo
+                    </div>
     
-
-        <h1 class="text-center">Iniciar Sesion</h1>
-        
-        <form class="needs-validation" action="" method="post">
-            <div class="form-group was-validated">
-                <label class="form-label" for="email">Usuario</label>
-
-                {% csrf_token%}
-
-                <input class="form-control" type="text" id="{{form.username}}
-                <div class="invalid-feedback">
-                    Por favor, Ingresa tu correo
                 </div>
- 
-            </div>
 
 
-            
-            <div class="form-group was-validated">
-                <label class="form-label" for="password">Contraseña</label>
-                <input class="form-control" type="password" id="{{form.password}}
-                <div class="invalid-feedback">
-                    Por favor, Ingresa tu Contraseña
+                
+                <div class="form-group was-validated">
+                    <label class="form-label" for="password">Contraseña</label>
+                    <input class="form-control" type="password" id="{{form.password}}
+                    <div class="invalid-feedback">
+                        Por favor, Ingresa tu Contraseña
+                    </div>
                 </div>
-            </div>
-            <div class="form-group form-check">
-                <input class="form-check-input" type="checkbox" id="check">
-                <label class="form-check-label" for="check">Recordarme</label>
-            </div>
-            <input class="btn btn-success" type="submit" value="Ingresar">
-        </form>
-
-       
-
-
+                <div class="form-group form-check">
+                    <input class="form-check-input" type="checkbox" id="check">
+                    <label class="form-check-label" for="check">Recordarme</label>
+                </div>
+                <input class="btn btn-success" type="submit" value="Ingresar">
+                
+                <a href="{% url 'home' %}" class="home">ir al home</a>
+            </form>
+        </div>
     </div>
-
-
-
+</div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     
 </body>
