--- a/static/base/style.css
+++ b/static/base/style.css
@@ -106,6 +106,11 @@ header .logo{
     
 }
 
+p.logo {
+    position: relative;
+    left: -200px;
+}
+
 header .container{
     display: flex;
     flex-direction: column;
@@ -133,13 +138,35 @@ header a{
 
 }
 
+a.btn-listar {
+    position: relative;
+    left: 200px;
+    top: 0px;
+}
+
+a.btn-agregar {
+    position: relative;
+    left: 200px;
+    top: 0px;
+}
+
+a.btn-Volver {
+    position: relative;
+    left: 200px;
+    top: 0;
+}
+
+a.btn-cerrar-login {
+    position: relative;
+    left: 200px;
+    top: 0px;
+}
+
 header a:hover{
     color: rgb(93, 3, 3);
     text-decoration: none;
     
 }
-
-
 
 #somos-pana .container{
     text-align: center;
