--- a/app/templates/app/crud/listar.html
+++ b/app/templates/app/crud/listar.html
@@ -28,10 +28,66 @@
 {% endblock %}
 {% block contenido%}
 
+{% load static %}
+<link rel="stylesheet" href="{% static 'crud/listar.css'%}">
+
 <div class="card">
     <div class="card body">
         <h2>Lista de panes</h2>
         <hr>
+        <form class="listar-Buscar" method="GET" action="{% url 'listar_buscar_producto' %}">
+            <input class="buscador" type="text" name="query" placeholder="Buscar por nombre">
+            <button class="btn-buscador-listar" type="submit">Buscar</button>
+        </form>
+        
+        {% if query %}
+            <br>
+
+            {% if productos  %}
+
+            <table class="table table-striped table-hover table-responsive-sm">
+                <tr>
+                    <th>ID</th>
+                    <th>Codigo</th>
+                    <th>Nombre</th>
+                    <th>Precio</th>
+                    <th>Descripcion</th>
+                    <th>imagen</th>
+    
+                    {% if perms.app.change_pan or perms.app.delete_pan %}
+                    <th>opciones</th>
+                    {% endif %}
+    
+                </tr>
+    
+                {% for productos in productos %}
+                <tr>
+                    <td>{{productos.id}}</td>
+                    <td>{{productos.codigo}}</td>
+                    <td>{{productos.nombre }}</td>
+                    <td>{{productos.precio}}</td>
+                    <td>{{productos.descripcion}}</td>
+                    <td><img src="{{ productos.imagen.url }}" alt="" class="img-listar"></td>
+    
+                    <td>
+    
+                        {% if perms.app.change_pan %}
+                        <a href="{%url 'modificar_producto' productos.codigo%}" class="btn btn-info">Modificar</a>
+                        {% endif %}
+                        
+                        {% if perms.app.delete_pan %}
+                        <a href="{%url 'eliminar_producto' productos.codigo%}" class="btn btn-danger" onclick="eliminarProducto(id)">Eliminar</a>
+                        {% endif %}
+                    </td>
+                </tr>
+            </table>
+
+            {% endfor %}
+            {% else %}
+                <p>No se encontraron productos.</p>
+            {% endif %}
+            
+        {% endif %}
 
         <table class="table table-striped table-hover table-responsive-sm">
             <tr>
@@ -55,7 +111,7 @@
                 <td>{{p.nombre }}</td>
                 <td>{{p.precio}}</td>
                 <td>{{p.descripcion}}</td>
-                <td>{{p.imagen}}</td>
+                <td><img src="{{ p.imagen.url }}" alt="" class="img-listar"></td>
 
                 <td>
 
@@ -64,7 +120,7 @@
                     {% endif %}
                     
                     {% if perms.app.delete_pan %}
-                    <a href="{%url 'eliminar_producto' p.codigo%}" class="btn btn-danger">Eliminar</a>
+                    <a href="{%url 'eliminar_producto' p.codigo%}" class="btn btn-danger" onclick="eliminarProducto(id)">Eliminar</a>
                     {% endif %}
                 </td>
             </tr>
