--- a/app/templates/app/personalizacion/personalizacion.html
+++ b/app/templates/app/personalizacion/personalizacion.html
@@ -14,15 +14,12 @@
                 <a href="{%url 'contacto'%}">Contacto</a>
 
                 {% if user.is_authenticated %}
-                <li>
                 <a href="{% url 'logout'%}">Cerrar Sesion</a>
-                </li>
-
+                <a class="btn-cerrar-login" href="#">@{{ user.username }}</a>
                 {% else %}
-                <li>
-                    <a href="{%url 'login'%}">Iniciar Sesion</a>
-                </li>
-            {% endif %}
+                <a href="{%url 'login'%}">Iniciar Sesion</a>
+                {% endif %}
+
             </nav>
         </div>
     </header>
